--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -5,26 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@types/node": "^24.10.4",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
-    "autoprefixer": "^10.4.23",
-    "axios": "^1.13.2",
-    "chart.js": "^4.5.1",
-    "pinia": "^3.0.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4",
-    "vue-chartjs": "^5.3.3",
-    "vue-router": "^4.6.4",
-    "vue-tsc": "^3.1.4"
+    "@vitejs/plugin-vue": "^4.3.4",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vue-tsc": "^1.8.8"
   }
 }
