--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev":  "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "dependencies":  {
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.0",
     "@vitejs/plugin-vue": "^4.3.4",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.8"
