--- a/client-portal/package.json
+++ b/client-portal/package.json
@@ -20,7 +20,7 @@
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "@tailwindcss/postcss": "^4.1.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vue-chartjs": "^5.3.3",
