Fix: Update landing-page PostCSS config and package.json

--- a/landing-page/package.json
+++ b/landing-page/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^24.10.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "@tailwindcss/postcss": "^4.1.0",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
