--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.0",
+  "@tailwindcss/postcss": "^4.1.18",
+  "tailwindcss": "^4.1.18",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer":  "^10.4.23",
