--- a/client-portal/Dockerfile
+++ b/client-portal/Dockerfile
@@ -1,22 +1,12 @@
-FROM node:20-alpine as builder
+FROM node:20-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm ci
 
-COPY . .
-RUN npm run build
+COPY . . 
 
-FROM node:20-alpine
+EXPOSE 3000
 
-WORKDIR /app
-
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/package*.json ./
-
-RUN npm ci --production
-
-EXPOSE 3001
-
-CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "3001"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
